--- a/my_site/requirements.txt
+++ b/my_site/requirements.txt
@@ -5,6 +5,7 @@ botocore==1.16.20
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.2
+cloudinary==1.21.1
 Cython==0.29.14
 dj-database-url==0.5.0
 Django==3.0.6
